<?xml version="1.0"?>
<package>
  <name>erle_imu_visualizer</name>
  <version>0.0.0</version>
  <description>The erle_imu_visualizer package</description>

  <maintainer email="ahcorde@erlerobot.com">Alejandro Hernandez</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>